# Waysight

./: Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: build.yml
src/: lib.rs  main.rs  state.rs
src/backend/: mod.rs  winit.rs
src/backend/drm/: device.rs  mod.rs
src/config/: mod.rs
src/handlers/: compositor.rs  input.rs  mod.rs  seat.rs  wsoutput.rs
src/rendering/: mod.rs
src/utils/: workspaces.rs
