[package]
name = "waysight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smithay = { git = "https://github.com/Smithay/smithay.git" }
smithay-drm-extras = { git = "https://github.com/Smithay/smithay.git" }
tracing = "0.1.37"
thiserror = "1.0.40"
